Add images needed for the project and css styling
Added images needed for the project and restructured the index.html file so that css styling to be easier during styling the page.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
-    <title>Landing Page</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Web Development Made Easy</title>
 </head>
 <body>
-    
+    <div class="header_container">
+        <div class="header">
+                <div>
+                    <h1>Web Dev Tutorial</h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </nav>
+        </div>
+        <div class="header_1">
+            <div class="side">
+                <h2>Fundamentals of web development</h2>
+            <p>We shall guide you in a step by step tutorial into understanding the fundamentals of web development.After completing this tutorial, you shall be able to build your own website with ease.</p>
+                <button>Sign Up</button>
+            </div>
+            <div class="side_img">
+                <img src="./images/web_dev.avif" width="500px" alt="header_image">
+            </div>
+        </div>
+    </div>   
+    <div class="main">
+        <h2 id="info">What this tutorial teaches</h2>
+        <div class="card">
+            <div class="course">HTML</div>
+            <p>This tutorial will teach you how to structure web pages using a markup langauage called Hyper Text MarkUp Language(HTML).</p>
+        </div>
+        <div class="card">
+            <div class="course">CSS</div>
+            <p>This tutorial shows you how web developers use Cascading Style Sheets(CSS) to make a webpage look beautiful and presentable.</p>
+        </div>
+        <div class="card">
+            <div class="course">JS</div>
+            <p>This tutorial shows you how web developers build dynamic sites by harnessing the power of JavaScript(JS).We delve into a step by step tutorial on how to use JS.</p>
+        </div>
+        <div class="card">
+            <div class="course">Node JS</div>
+            <p>This tutorial teaches you how to build backend of websites by harnessing the power of Node JS.We delve into a step by step tutorial on how to use NodeJS.</p>
+        </div>
+    </div>
+    <div class="quote">
+        <blockquote>
+            <p>
+                Any fool can write code that a computer can understand. Good programmers write code that humans can understand. 
+            </p>
+            <footer> ― Martin Fowler</footer>
+        </blockquote>
+    </div>
+    <div class="signupcard">
+        <h3>Want to learn to code? Well, it's time</h3>
+        <p>To start learning right away just click on the button below to sign up.</p>
+        <button>Sign Up</button>
+    </div>
+    <div class="footer">
+        Copyright &copy; The Odin Project 2023.
+    </div>
 </body>
 </html>
