Add more css styling and logo for my landing page
Finished styling the page and now looks presentable.Also i added a logo for the page.

--- a/images/Web Development Made Easy.html
+++ b/images/Web Development Made Easy.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<!-- saved from url=(0057)file:///home/analizer/repos/odin-landing-page/index.html# -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./Web Development Made Easy_files/styles.css">
     <title>Web Development Made Easy</title>
 </head>
 <body>
     <div class="header_container">
         <div class="header">
                 <div>
-                    <h1><img src="./images/logo.jpg" width="120px" alt="logo"></h1>
+                    <h1>Web Dev Tutorial</h1>
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="file:///home/analizer/repos/odin-landing-page/index.html#">Home</a></li>
+                        <li><a href="file:///home/analizer/repos/odin-landing-page/index.html#">Services</a></li>
+                        <li><a href="file:///home/analizer/repos/odin-landing-page/index.html#">About Us</a></li>
+                        <li><a href="file:///home/analizer/repos/odin-landing-page/index.html#">Contact Us</a></li>
                     </ul>
                 </nav>
         </div>
@@ -25,10 +25,10 @@
             <div class="side">
                 <h2>Fundamentals of web development</h2>
             <p>We shall guide you in a step by step tutorial into understanding the fundamentals of web development.After completing this tutorial, you shall be able to build your own website with ease.</p>
-                <button id="btn_signup">Sign Up</button>
+                <button>Sign Up</button>
             </div>
             <div class="side_img">
-                <img src="./images/web_dev.avif" width="500px" alt="header_image">
+                <img src="./Web Development Made Easy_files/web_dev.avif" width="500px" alt="header_image">
             </div>
         </div>
     </div>   
@@ -76,11 +76,11 @@
         <p>To start learning right away just click on the button below to sign up.</p>
         </div>
         <div>
-            <button id="btn">Sign Up</button>
+            <button>Sign Up</button>
         </div>
     </div>
     <div class="footer">
-        Copyright &copy; The Odin Project 2023.
+        Copyright © The Odin Project 2023.
     </div>
-</body>
-</html>
+
+</body></html>
