design for small screens
Added media query to cater for smaller screens.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button id="btn_signup">Sign Up</button>
             </div>
             <div class="side_img">
-                <img src="./images/web_dev.avif" width="500px" alt="header_image">
+                <img src="./images/web_dev.avif" width="100%" alt="header_image">
             </div>
         </div>
     </div>   
